# wrapper-esp32

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
.github/workflows/: upload_component.yml
board/m5stack_core_s3_cpp/: m5stack_core_s3.cpp  m5stack_core_s3.hpp
device/: aw9523.cpp  aw9523.hpp  axp2101.cpp  axp2101.hpp
example/: chboard  prompts  sdkconfig-m5t5  sdkconfig.old
example/.github/: copilot-instructions.md
example/.github/prompts/: plan-dsiDisplayWrapper.prompt.md
example/main/: app_main.cpp  idf_component.yml  keyboard.cpp  keyboard.h
src/device/: aw9523.cpp  aw9523.hpp  axp2101.cpp  axp2101.hpp  bq25896.cpp  bq25896.hpp  gt911.cpp  gt911.hpp  ili9341.cpp  ili9341.hpp  ili9881c.cpp  ili9881c.hpp  ip5306.hpp  m5stack_cardputer_keyboard.cpp  m5stack_cardputer_keyboard.hpp  m5stack_comx_lte.hpp  m5stack_unit_extio2.cpp  m5stack_unit_extio2.hpp  pi4ioe5v6408.cpp  pi4ioe5v6408.hpp  ssd1306.hpp  st7796.cpp  st7796.hpp  tca8418.cpp  tca8418.hpp  xl9555.cpp  xl9555.hpp
src/wrapper/: audio.cpp  audio.hpp  display-dsi.cpp  display-dsi.hpp  display-new.cpp  display-new.hpp  display.cpp  display.hpp  encoder.cpp  encoder.hpp  fatfs.cpp  fatfs.hpp  freertos.cpp  freertos.hpp  i2c.cpp  i2c.hpp  i2s.cpp  i2s.hpp  ldo.cpp  ldo.hpp  ledc.cpp  ledc.hpp  logger.cpp  logger.hpp  lvgl.cpp  lvgl.hpp  ota.cpp  ota.hpp  partition.cpp  partition.hpp  sd_mmc.cpp  sd_mmc.hpp  sd_spi.cpp  sd_spi.hpp  sd_types.hpp  soc.cpp  soc.hpp  spi.cpp  spi.hpp  spiffs.cpp  (+5 more)
wrapper/: naudio.cpp  naudio.hpp  ni2c.cpp  ni2c.hpp  ni2s.cpp  ni2s.hpp  rename.sh  waudio.cpp  waudio.hpp  wdisplay.cpp  wdisplay.hpp  wi2c.cpp  wi2c.hpp  wi2s.cpp  wi2s.hpp  wlogger.cpp  wlvgl.cpp  wlvgl.hpp  wspi.cpp  wspi.hpp  wtouch.cpp  wtouch.hpp
(+18 files in other folders)
